akoapps/planespotter-ingress/ps-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-planespotter-web
  labels:
    app: planespotter
    tier: web
spec:
  selector:
    app: planespotter
    tier: web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-planespotter-small
spec:
  rules:
    - host: ps-ingress.tkg.lab04
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-planespotter-web
              port:
                number: 80
